# neural-network-from-scratch

./: .gitignore  README.md  neural_network.ipynb  neural_network.py  pyproject.toml  requirements.txt
src/adam/: adam.py  docs.md
src/adam/img/: linear_regression.HEIC
src/simple_network/: docs.md  simple_network.py
src/simple_network/img/: neural_network_structure.HEIC
